@@ -46,3 +46,7 @@ s0_slide_duration = 0
 
 [showdesktop]
 s0_skip_animation = true
+
+[move]
+s0_mode = 1
+s0_blend = false
