@@ -70,6 +70,54 @@
 		<_long>Do not update the server-side position of windows until finished moving.</_long>
 		<default>false</default>
 	    </option>
+
+	    <group>
+	    <_short>Appearance</_short>
+		<option name="mode" type="int">
+		    <_short>Default Moving Window Mode</_short>
+		    <_long>Default mode used for window moving.</_long>
+		    <default>0</default>
+		    <min>0</min>
+		    <max>2</max>
+		    <desc>
+			<value>0</value>
+			<_name>Normal</_name>
+		    </desc>
+		    <desc>
+			<value>1</value>
+			<_name>Outline</_name>
+		    </desc>
+		    <desc>
+			<value>2</value>
+			<_name>Rectangle</_name>
+		    </desc>
+		</option>
+		<option name="border_color" type="color">
+		    <_short>Border Color</_short>
+		    <_long>Border color used for outline and rectangle moving modes</_long>
+		    <default>
+			<red>0xfbfb</red>
+			<green>0x8b8b</green>
+			<blue>0x0</blue>
+			<alpha>0x9f9f</alpha>
+		    </default>
+		</option>
+		<option name="fill_color" type="color">
+		    <_short>Fill Color</_short>
+		    <_long>Fill color used for rectangle moving mode</_long>
+		    <default>
+			<red>0xfbfb</red>
+			<green>0x8b8b</green>
+			<blue>0x0</blue>
+			<alpha>0x1919</alpha>
+		    </default>
+		</option>
+		<option name="blend" type="bool">
+		    <_short>Enable Transparency</_short>
+		    <_long>Enable or disable blending.</_long>
+		    <default>true</default>
+		</option>
+	    </group>
 	</options>
     </plugin>
 </compiz>
