@@ -1,6 +1,7 @@
 compiz (1:0.9.12.2+16.04.20160823-0ubuntu2) UNRELEASED; urgency=medium
 
   * Added option to disable blend in grid plugin
+  * Move: add options for showing only the window shape (filled or not)
 
  -- Eleni Maria Stea <elenimaria.stea@canonical.com>  Tue, 27 Jun 2017 18:49:59 +0200
 
